# open-electricity

./: pyproject.toml
.github/workflows/: daily-fetch.yml  deploy-pages.yml
data/raw/emc/: 20260613.parquet  20260615.parquet  20260616.parquet  20260617.parquet  20260619.parquet  20260620.parquet  20260621.parquet  20260622.parquet  20260623.parquet  20260624.parquet
data/raw/live/: 20260620.json  20260622.json  20260623.json  20260624.json  20260626.json  20260627.json  20260628.json  20260629.json  20260630.json  20260701.json
data/raw/retail/: 2026-06-20.parquet  20260622.parquet  20260623.parquet  20260624.parquet  20260626.parquet  20260627.parquet  20260628.parquet  20260629.parquet  20260630.parquet  20260701.parquet
docs/: index.html
docs/data/: daily_diff.json  emc_daily_summary.json  live.json  manifest.json  monthly_analytics.json  quarterly_prediction.json  retail_history.json  retail_latest.json  weekly_brief.json
docs/data/emc/: 2026-06-13.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json
scripts/: build_site.py
src/oem_tracker/: analytics.py  cli.py  config.py  exporter.py  reports.py  storage.py
src/oem_tracker/scrapers/: ema.py  emc.py  live.py  oem.py  retail.py
tests/: test_analytics.py  test_exporter.py  test_reports.py  test_storage.py
